# llama-index-app

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/config/: env.py
